# distro

./: .gitignore  Cargo.toml  flake.nix
src/: main.rs
